tests/analyze/variant-ambiguity/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Variant `red` is ambiguous: it could refer to `color` or `fruit`.
> 14 |   if c is red {
                 ^^^

